--- a/package.json
+++ b/package.json
@@ -7,5 +7,27 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xssssl",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.57",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.0.14",
+    "aws-sdk": "^2.704.0",
+    "aws-xray-sdk": "^3.1.0",
+    "serverless-aws-documentation": "^1.1.0",
+    "serverless-dynamodb-local": "^0.2.37",
+    "serverless-iam-roles-per-function": "^2.0.2",
+    "serverless-offline": "^6.4.0",
+    "serverless-reqvalidator-plugin": "^1.0.3",
+    "serverless-webpack": "^5.3.2",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "middy": "^0.36.0",
+    "source-map-support": "^0.5.19",
+    "uuid": "^8.2.0"
+  }
 }
