--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.36.0",
     "source-map-support": "^0.5.19",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "winston": "^3.3.3"
   }
 }
