--- a/serverless.yml
+++ b/serverless.yml
@@ -11,9 +11,17 @@ plugins:
   - serverless-dynamodb-local
   - serverless-offline
 
+package:
+  individually: true
+
 provider:
   name: aws
   runtime: nodejs12.x
+
+  logs:
+    restApi:
+      level: INFO
+      fullExecutionData: true
   
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'ap-southeast-1'}
@@ -95,7 +103,10 @@ functions:
           method: post
           path: recipients
           cors: true
-    iamRoleStatementsInherit: true
+          request:
+            parameters:
+              querystrings:
+                userId: true
     iamRoleStatementsName: ${self:custom.APP_NAME}-CreateRecipient-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -110,12 +121,20 @@ functions:
           method: get
           path: recipients/id/{recipientId}
           cors: true
+          request:
+            parameters:
+              paths:
+                recipientId: true
+          authorizer:
+            type: cognito_user_pools
+            authorizerId:
+              Ref: ParcelTrackingApiGatewayAuthorizer
     iamRoleStatementsInherit: true
     iamRoleStatementsName: ${self:custom.APP_NAME}-GetRecipient-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
         Action:
-          - dynamodb:Query
+          - dynamodb:GetItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.RECIPIENTS_TABLE}
 
 resources:
