add Fn getAllRecipientsByMobile

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serverless-dynamodb-local": "^0.2.37",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-offline": "^6.4.0",
+    "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.2",
     "ts-loader": "^7.0.5",
