add sns topic and Fn IdPhotosAddWatermark and modify webpack config correspondly

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/aws-lambda": "^8.10.57",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.14",
-    "aws-sdk": "^2.704.0",
+    "aws-sdk": "^2.713.0",
     "aws-xray-sdk": "^3.1.0",
+    "file-loader": "^6.0.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-dynamodb-local": "^0.2.37",
     "serverless-iam-roles-per-function": "^2.0.2",
@@ -26,6 +27,7 @@
     "webpack": "^4.43.0"
   },
   "dependencies": {
+    "jimp": "^0.14.0",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.36.0",
     "source-map-support": "^0.5.19",
