--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-dynamodb-local
   - serverless-offline
-  - serverless-plugin-tracing
+  # - serverless-plugin-tracing
 
 package:
   individually: true
@@ -35,6 +35,7 @@ provider:
     RECIPIENTS_MOBILE_INDEX: RecipientsMobileIndex
     LOGISTICS_TABLE: Logistics-${self:provider.stage}
     RECIPIENTS_ID_PHOTOS_S3_BUCKET: recipients-id-photos-${self:provider.stage}
+    RECIPIENTS_ID_PHOTOS_WATERMARK_S3_BUCKET: recipients-id-photos-watermark-${self:provider.stage}
 
   tracing:
     lambda: true
@@ -53,6 +54,7 @@ custom:
   AUTH_USER_POOL_CLIENT_NAME: ParcelTrackingWebApp
   AUTH_PREFIX_DOMAIN: parceltracking
   AUTH_CALLBACK_URL: http://localhost:3000/callback
+  ID_PHOTOS_UPLOADED_TOPIC: idPhotoUploaded-${self:provider.stage}
 
   serverless-offline:
     httpPort: 3003
@@ -122,6 +124,7 @@ functions:
             requestModels:
               'application/json': CreateRecipientRequest
           reqValidatorName: RequestBodyValidator
+    iamRoleStatementsInherit: true
     iamRoleStatementsName: ${self:custom.APP_NAME}-CreateRecipient-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -244,10 +247,6 @@ functions:
     iamRoleStatementsInherit: true
     iamRoleStatementsName: ${self:custom.APP_NAME}-GetSignedUploadUrls-${self:provider.stage}
     iamRoleStatements:
-      # - Effect: Allow
-      #   Action:
-      #     - dynamodb:UpdateItem
-      #   Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.RECIPIENTS_TABLE}
       - Effect: Allow
         Action:
           - s3:*
@@ -282,6 +281,34 @@ functions:
           - s3:*
         Resource: arn:aws:s3:::${self:provider.environment.RECIPIENTS_ID_PHOTOS_S3_BUCKET}/*
 
+  IdPhotosAddWatermark:
+    handler: src/lambda/s3/idPhotosAddWatermark.handler
+    events:
+      - sns:
+          arn:
+            Fn::Join:
+              - ':'
+              - - arn:aws:sns
+                - Ref: AWS::Region
+                - Ref: AWS::AccountId
+                - ${self:custom.ID_PHOTOS_UPLOADED_TOPIC}
+          topicName: ${self:custom.ID_PHOTOS_UPLOADED_TOPIC}
+    environment:
+      WATERMARK_MARGIN_PERCENTAGE: 5
+    timeout: 5
+    iamRoleStatementsInherit: true
+    iamRoleStatementsName: ${self:custom.APP_NAME}-IdPhotosAddWatermark-${self:provider.stage}
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - s3:*
+        Resource: arn:aws:s3:::${self:provider.environment.RECIPIENTS_ID_PHOTOS_S3_BUCKET}/*
+      - Effect: Allow
+        Action:
+          - s3:*
+        Resource: arn:aws:s3:::${self:provider.environment.RECIPIENTS_ID_PHOTOS_WATERMARK_S3_BUCKET}/*
+    
+
 resources:
   Resources:
     RecipientsDynamoDBTable:
@@ -307,14 +334,9 @@ resources:
             - AttributeName: mobile
               KeyType: HASH
             Projection:
-              # ProjectionType: ALL
               ProjectionType: INCLUDE
               NonKeyAttributes: 
                 - "fullname"
-            #     # - "parcels"
-            # ProvisionedThroughput:
-            #     ReadCapacityUnits: 3
-            #     WriteCapacityUnits: 3
 
     ParcelTrackingCognitoUserPool:
       Type: AWS::Cognito::UserPool
@@ -393,8 +415,13 @@ resources:
 
     RecipientsIdPhotosBucket:
       Type: AWS::S3::Bucket
+      DependsOn: IdPhotosUploadedTopicPolicy
       Properties:
         BucketName: ${self:provider.environment.RECIPIENTS_ID_PHOTOS_S3_BUCKET}
+        NotificationConfiguration:
+          TopicConfigurations:
+            - Event: s3:ObjectCreated:Put
+              Topic: !Ref RecipientIdPhotosUploadedTopic
         CorsConfiguration:
           CorsRules:
             - AllowedOrigins:
@@ -408,6 +435,35 @@ resources:
                 - DELETE
                 - HEAD
               MaxAge: 3000
+
+    RecipientsIdPhotosWatermarkBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.RECIPIENTS_ID_PHOTOS_WATERMARK_S3_BUCKET}
+
+    RecipientIdPhotosUploadedTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: Recipient ID Photos Uploaded Topic
+        TopicName: ${self:custom.ID_PHOTOS_UPLOADED_TOPIC}
+
+    IdPhotosUploadedTopicPolicy:
+      Type: AWS::SNS::TopicPolicy
+      Properties:
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                AWS: "*"
+              Action: sns:Publish
+              Resource:
+                !Ref RecipientIdPhotosUploadedTopic
+              Condition:
+                ArnLike:
+                  AWS:SourceArn: arn:aws:s3:::${self:provider.environment.RECIPIENTS_ID_PHOTOS_S3_BUCKET}
+        Topics:
+          - !Ref RecipientIdPhotosUploadedTopic
 
   Outputs:
     CognitoUserPoolId:
