--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ cache:
 install:
   - npm install
   - npm install -g serverless
+before_script:
+  - export NODE_OPTIONS=--max_old_space_size=4096
 script: 
   - sls deploy -v
