--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.713.0",
     "aws-xray-sdk": "^3.1.0",
     "file-loader": "^6.0.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-dynamodb-local": "^0.2.37",
     "serverless-iam-roles-per-function": "^2.0.2",
@@ -22,6 +23,7 @@
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.2",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0"
