--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - node_modules
 install:
   - npm install
-  - npm install -g serverless
+  - npm install -g serverless@1.72.0
 before_script:
   - export NODE_OPTIONS=--max_old_space_size=8192
 script: 
