--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.2",
-    "speed-measure-webpack-plugin": "^1.3.3",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0"
